prepare to test user model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% if current_user %>
+  Signed in as <%= current_user.first_name %>!
+  <%= link_to "Sign out", signout_path %>
+<% else %>
+  <%= link_to "Sign in with Foursquare", "/auth/foursquare" %>
+<% end %>
+
 <%= yield %>
 
 </body>
